--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "learning-jest",
   "version": "0.1.0",
   "description": "Learning Jest Testing Framework",
-  "main": "index.js"
+  "main": "index.js",
+  "devDependencies": {
+    "jest": "^29.6.2"
+  }
 }
