--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "Learning Jest Testing Framework",
   "main": "index.js",
   "devDependencies": {
-    "jest": "^29.6.2"
-  }
+    "jest": "^29.6.2"},
+  "scripts": {
+      "test": "jest --coverage"
+    }
 }
+
+
+
