--- a/package.json
+++ b/package.json
@@ -2,5 +2,11 @@
   "name": "learning-jest",
   "version": "0.1.0",
   "description": "Learning Jest Testing Framework",
-  "main": "index.js"
+  "main": "index.js",
+  "dependencies": {
+    "jest": "^29.7.0"
+  },
+  "scripts": {
+    "test": "jest --coverage --watchAll"
+  }
 }
